--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'material-icons/iconfont/material-icons.css';
+
+
+html, body {
+    height: 100%;
+}
